--- a/monster-generator/css/mgen.css
+++ b/monster-generator/css/mgen.css
@@ -2,6 +2,7 @@ body
 {
 	width: 100%; height: 100%;
 	overflow: hidden;
+	font-family: 'Alegreya', serif;
 }
 
 #columnLeft
@@ -9,7 +10,8 @@ body
 	background-color: grey;
 	width: calc(100% / 6); 
 	float: left;
-	padding-bottom: 1em; padding-top: 1em;
+	padding-bottom: 1em; padding-top: 1em; 
+	margin-right: 1em;
 }
 
 #columnMiddle
@@ -17,7 +19,8 @@ body
 	background-color: red;
 	width: calc(100% / 3); 
 	float: left;
-		padding-bottom: 1em; padding-top: 1em;
+	padding-bottom: 1em; padding-top: 1em;
+	margin-right: 1em;
 }
 
 #columnRight
@@ -25,12 +28,18 @@ body
 	background-color: gray; 
 	width: calc(100% / 3); 
 	float: left;
-		padding-bottom: 1em; padding-top: 1em;
+	padding-bottom: 1em; padding-top: 1em;
+	margin-right: 1em;
 }
 
 #picture img
 {
 	width: 100%; height: auto;
+}
+
+#nameInput
+{
+	width: 80%;
 }
 
 .graph
