--- a/monster-generator/css/mgen.css
+++ b/monster-generator/css/mgen.css
@@ -47,9 +47,6 @@ body
 	width: 100%; 
 	height: auto;
 	min-height: 300px;
-	background-image: url("../imgs/graph.png");
-	background-size: auto 100%;
-	background-position: center;
-	background-repeat: no-repeat;
+	background-color: white;
 	margin-bottom: 2px;
 }
