--- a/monster-generator/css/mgen.css
+++ b/monster-generator/css/mgen.css
@@ -55,3 +55,10 @@ body
 {
 	margin-left: 10%;
 }
+
+.noSelect
+{
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+}
