--- a/monster-generator/css/mgen.css
+++ b/monster-generator/css/mgen.css
@@ -5,6 +5,11 @@ body
 	font-family: 'Alegreya', serif;
 }
 
+p
+{
+	margin-left: 1%;
+}
+
 #columnLeft
 {
 	background-color: grey;
@@ -39,7 +44,8 @@ body
 
 .userStatInputs
 {
-	width: 60%;
+	width: 50%;
+	margin-left: 1%;
 }
 
 .graph
