+ Working increment / decrement for ability score radar chart.

--- a/monster-generator/css/gen2.css
+++ b/monster-generator/css/gen2.css
@@ -55,3 +55,15 @@
 	width: 100%; 
 	height: 100%; 
 }
+
+.upBtn
+{
+	background-color: green;
+	display: inline;
+}
+
+.downBtn
+{
+	background-color: red;
+	display: inline;
+}
