--- a/monster-generator/css/overlaysample.css
+++ b/monster-generator/css/overlaysample.css
@@ -16,11 +16,34 @@ html, body, #main
 	bottom: 0;
 	left: 5%; 
 	width: 70%; 
-	min-height: 200px;
-	max-height: 200px;
+	height: 30%; 
+	overflow: hidden;
 }
 
 .ui-tabs-panel
 {
+}
+
+.tabContent
+{
 	height: auto;
+	overflow-y: scroll;
+}
+
+#loadBtn
+{width: 300px; 
+	height: 300px;
+
+}
+
+.tabContent h1
+{
+	font-size: 10px;
+	display: inline;
+}
+
+.tabContent span
+{
+	font-size: 10px; 
+	display: inline;
 }
