Dynamically load in pre-populated input fields for new format of monster data.

--- a/monster-generator/css/overlaysample.css
+++ b/monster-generator/css/overlaysample.css
@@ -53,3 +53,15 @@ html, body, #main
 	rows: 10;
 	width: 90%;
 }
+
+select
+{
+	-webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+   	font-size: 10px; 
+}
+
+option
+{
+}
