--- a/monster-generator/css/overlaysample.css
+++ b/monster-generator/css/overlaysample.css
@@ -14,9 +14,9 @@ html, body, #main
 	position: absolute; 
 	background: none;
 	left: 5%; 
-	bottom: -25px;
+	bottom: 0;
 	width: 70%; 
-	height: 20%; 
+	height: 25%; 
 	overflow: hidden;
 	border-radius:10px;
 }
@@ -27,7 +27,7 @@ html, body, #main
 
 .tabContent
 {
-	height: auto;
+	height: 250px;
 	overflow-y: scroll;
 }
 
