--- a/auxiliary-pages/css/aux-pages.css
+++ b/auxiliary-pages/css/aux-pages.css
@@ -38,7 +38,29 @@ body
   
 }
 
-textarea {
+
+.driftwoodButtons
+{
+	background: -webkit-linear-gradient(#0088cc, #0044cc); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#0088cc, #0044cc); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#0088cc, #0044cc); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#0088cc, #0044cc); /* Standard syntax (must be last) */
+	border-radius: 8px;
+	width: 20%;
+	height: 5%;
+	padding: 8px;
+	margin-top: 2%;
+	color:white;
+}
+
+.driftwoodButtons:hover
+{
+	color: #ffffff;
+	background: #0044cc;
+}
+
+textarea 
+{
         @include box-sizing(border-box);
         padding: 10px;
 		margin-top:5%;
@@ -58,5 +80,4 @@ textarea {
           &:focus {
 
           }
-        }
-      
+}
