Working on loading, hooking up events for UI, etc

--- a/demo-overlay/tabscss.css
+++ b/demo-overlay/tabscss.css
@@ -910,6 +910,15 @@ select {
 	width: calc(100% - 340px);
 }
 
+.monstercontent input
+{
+  display: inline-block;
+}
+
+.monstercontent p
+{
+  display: inline;
+}
 
 #saveicon
 {
