--- a/update/public/static/css/tabscss.css
+++ b/update/public/static/css/tabscss.css
@@ -955,6 +955,17 @@ select {
   left: 0;
 }
 
+#notesarea
+{
+  width: 100%; 
+  height: 100%; 
+  rows: 4;
+}
+#m_feats, #m_skills
+{
+  width: 100%;
+}
+
 /*.panel
 {
 	webkit-box-shadow: 0 2px 6px rgba(0,0,0,0.2);
