Minor updates to update code to the coding standards.

--- a/update/public/static/css/aux-pages.css
+++ b/update/public/static/css/aux-pages.css
@@ -1,3 +1,10 @@
+/*
+  Filename: index.html
+  
+  Authors:
+    Mario Chuman		mxc7819@g.rit.edu
+*/
+
 body
 {	
 	background: white url("../images/driftwoodimage.png") no-repeat top left fixed;
