--- a/update/public/static/css/tabscss.css
+++ b/update/public/static/css/tabscss.css
@@ -966,6 +966,11 @@ select {
   width: 100%;
 }
 
+.chat, .objects, .monsters, .social
+{
+  height: 100%;
+}
+
 /*.panel
 {
 	webkit-box-shadow: 0 2px 6px rgba(0,0,0,0.2);
