--- a/update/public/static/css/tabscss.css
+++ b/update/public/static/css/tabscss.css
@@ -1005,6 +1005,67 @@ select {
 {
   padding: 0;
 }
+
+#tabholder
+{
+  height: 100%;
+  background-color: white;
+  position: relative;
+}
+
+#chat
+{
+  width: 340px;
+  height: 100%;
+}
+
+#chatwindow
+{
+  height: 74%;
+  width: 340px;
+ 
+  min-height: 100px;
+  overflow-y: scroll;
+  display: block;
+}
+
+#chatinput-div
+{
+  height: 40px;
+   width: 340px;
+  display: block;
+}
+#chatinput-input 
+{
+  height: 40px;
+  display: inline-block;
+  width: 80%;
+}
+#chatinput-send
+{
+  height: 40px;
+  display: inline-block; 
+  width: 15%;
+}
+
+
+h2{ margin: 0; padding: 0;}
+
+.profile-heading
+{
+  background-color: grey; 
+  color: white; 
+  font-size: 110%;
+}
+
+.social ul
+{
+  list-style-type: none;
+}
+
+
+
+
 /*.panel
 {
 	webkit-box-shadow: 0 2px 6px rgba(0,0,0,0.2);
